--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="compass">Bússola</string>
     <string name="level">Nível</string>
     <string name="descricao_bussola">Imagem de uma bússola</string>
+    <string name="delete_all">Apagar todas imagens</string>
     <string name="descricao_level">Imagem tranparente</string>
+    <string name="title">Canivete suíço</string>
 </resources>
